# ETL_DEVOPS

./: .gitignore  README.md  pyproject.toml
src/: database_manipulation.py  devops_api.py  main.py
